2006-09-14  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/main.cpp: Fix up the player selection command line option.

2006-09-12  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp, src/game.h: Simplified fps limiting a bit and added
	some comments. Now based on ConfigListener so that the fpslimit option
	doesn't need to be queried the whole time.
	* NEWS: Updated with some items.

2006-09-11  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/game.cpp: Fixed more fps issues.

2006-09-09  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/gui.cpp: Removed easy targeting functionality since it
	interferes with walking around too much. Targeting can still be rather
	conveniently done with 'a' or the middle mouse button.

2006-09-07  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/resources/image.cpp: Fixed a typo.
	* src/resources/image.cpp: Worked around a memory leak when using
	OpenGL.

2006-09-06  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/item010.png, data/graphics/sprites/item010.xml,
	data/graphics/sprites/Makefile.am: Added santa hat sprites and updated
	makefile.

2006-09-06  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/game.cpp, src/gui/setup_video.cpp, src/main.cpp: Fixed fps
	limiter issues and increased default limit to 60.
	* src/game.cpp: Fixed fps limiter when disabled.

2006-09-05  Philipp Sehmisch  <tmw@crushnet.org>
	* data/graphics/tiles/Woodland_ground.png,
	data/graphics/tiles/Woodland_x2.png,
	data/graphics/tiles/Woodland_x3.png: Some minor improvements and
	additions at my tilesets.
	* data/graphics/sprites/monster0.xml,
	data/graphics/sprites/monster1.xml,
	data/graphics/sprites/monster2.xml,
	data/graphics/sprites/monster3.xml,
	data/graphics/sprites/monster4.xml,
	data/graphics/sprites/monster5.xml,
	data/graphics/sprites/monster6.xml,
	data/graphics/sprites/monster8.xml,
	data/graphics/sprites/monster9.xml,
	data/graphics/sprites/monster11.xml,
	data/graphics/sprites/monster13.xml,